--- a/App2/MainPage.xaml
+++ b/App2/MainPage.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    
     <Grid>
-
+        <Button Content="HELLO"></Button>
     </Grid>
 </Page>
